--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello, world!
+<!doctype html>
+<html>
+	<head>
+		<title>Shea Conlon</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
+
+		<link rel="stylesheet" href="/styles/main.css" />
+		<link rel="stylesheet" href="/styles/home.css" />
+	</head>
+	<body>
+		<ul id="site-navigation">
+			<li id="logo">SC</li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/projects">Projects</a></li>
+			<li><a href="/resume">Resume</a></li>
+			<li><a href="/contact">Contact</a></li>
+	
+		</ul>
+
+		<p id="headline">
+			Hi! I'm Shea, an aspiring data scientist and software engineer.
+		</p>
+	</body>
+</html>
