link and change font of logo

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
 
 		<link rel="stylesheet" href="/styles/main.css" />
 		<link rel="stylesheet" href="/styles/home.css" />
 	</head>
 	<body>
 		<ul id="site-navigation">
-			<li id="logo">SC</li>
+			<li id="logo"><a href="/">SC</a></li>
 			<li><a href="/">Home</a></li>
 			<li><a href="/projects">Projects</a></li>
 			<li><a href="/resume">Resume</a></li>
