change positioning technique for navbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 		<p id="headline">
 			Hi! I'm Shea, an aspiring data scientist and software engineer.
+			<span class="phantom"><br><br><br></span>
 		</p>
 	</body>
 </html>
