--- a/projects.html
+++ b/projects.html
@@ -1,66 +1,84 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Shea Conlon &mdash; Projects</title>
+    <head>
+        <title>Shea Conlon &mdash; Projects</title>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
 
-		<link rel="stylesheet" href="/styles/main.css" />
-		<link rel="stylesheet" href="/styles/projects.css" />
-	</head>
-	<body>
-		<ul id="site-navigation">
-			<li id="logo"><a href="/">SC</a></li>
-			<li><a href="/">Home</a></li>
-			<li><a href="/projects">Projects</a></li>
-			<li><a href="/resume">Resume</a></li>
-			<li><a href="/contact">Contact</a></li>
-		</ul>
+        <link rel="stylesheet" href="/styles/main.css" />
+        <link rel="stylesheet" href="/styles/projects.css" />
+    </head>
+    <body>
+        <ul id="site-navigation">
+            <li id="logo"><a href="/">SC</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/resume">Resume</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
 
-		<div id="cards">
-			<div class="card">
-				<h2 class="title">ml_research</h2>
-				<div class="preview">preview</div>
-				<div class="tag-set">
-					<div class="tag-set-title">Languages:</div>
-					<div class="tag">R</div>
-				</div>
-				<div class="tag-set">
-					<div class="tag-set-title">Tools:</div>
-					<div class="tag">Docker</div>
-				</div>
-				<p class="description">An R package containing implementations of Gaussian process dynamic programming and Markov chain Monte Carlo. An R package containing applications of the above to ecological optimal control.</p>
-			</div>
-			<div class="card">
-				<h2 class="title">fractals</h2>
-				<div class="preview">preview</div>
-				<div class="tag-set">
-					<div class="tag-set-title">Languages:</div>
-					<div class="tag">Javascript</div>
-					<div class="tag">HTML/CSS</div>
-				</div>
-				<div class="tag-set">
-					<div class="tag-set-title">Tools:</div>
-				</div>
-				<p class="description">A threaded fractal viewer for the browser. Zoom and pan, with fast, progressive rendering.</p>
-			</div>
-			<div class="card">
-				<h2 class="title">sheaconlon.com</h2>
-				<div class="preview">preview</div>
-				<div class="tag-set">
-					<div class="tag-set-title">Languages:</div>
-					<div class="tag">HTML/CSS</div>
-				</div>
-				<div class="tag-set">
-					<div class="tag-set-title">Tools:</div>
-					<div class="tag">AWS EC2</div>
-					<div class="tag">Linux</div>
-					<div class="tag">Apache</div>
-				</div>
-				<p class="description">Deployed using Apache running on an Ubuntu VM on an AWS EC2 instance. Separate production and development sites and git for deployment.</p>
-			</div>
-		</div>
-	</body>
+        <div id="cards">
+            <div class="card">
+                <h2 class="title">ml_research</h2>
+                <div class="preview">
+                    <img id="ml-research-image" src="projects_ml_research.png" />
+                </div>
+                <div class="caption">Image: probability distribution for population size transition</div>
+                <div class="tag-set">
+                    <div class="tag-set-title">Languages:</div>
+                    <div class="tag">R</div>
+                </div>
+                <div class="tag-set">
+                    <div class="tag-set-title">Tools:</div>
+                    <div class="tag">Docker</div>
+                    <div class="tag">Gaussian process</div>
+                    <div class="tag">Stochastic dynamic programming</div>
+                    <div class="tag">Markov chain Monte Carlo</div>
+                </div>
+                <p class="description">An R package containing implementations of Gaussian process dynamic programming and Markov chain Monte Carlo. An R package containing applications of the above to ecological optimal control.</p>
+            </div>
+            <div class="card">
+                <h2 class="title">fractals</h2>
+                <div class="preview">
+                    <canvas id="fractals-canvas"></canvas>
+                </div>
+                <div class="caption">Image: interactive fractal viewer</div>
+                <div class="tag-set">
+                    <div class="tag-set-title">Languages:</div>
+                    <div class="tag">Javascript</div>
+                    <div class="tag">HTML/CSS</div>
+                </div>
+                <div class="tag-set">
+                    <div class="tag-set-title">Tools:</div>
+                </div>
+                <p class="description">A threaded, interactive fractal viewer for the browser. Zoom and pan, with fast, progressive rendering.</p>
+            </div>
+            <div class="card">
+                <h2 class="title">sheaconlon.com</h2>
+                <div class="preview">
+                    <img id="sheaconloncom-image" src="projects_sheaconloncom.png" />
+                </div>
+                <div class="caption">Image: time to first byte for this website over the last week</div>
+                <div class="tag-set">
+                    <div class="tag-set-title">Languages:</div>
+                    <div class="tag">HTML/CSS</div>
+                </div>
+                <div class="tag-set">
+                    <div class="tag-set-title">Tools:</div>
+                    <div class="tag">AWS EC2</div>
+                    <div class="tag">Linux</div>
+                    <div class="tag">Apache</div>
+                </div>
+                <p class="description">Deployed using Apache running on an Ubuntu VM on an AWS EC2 instance. Separate production and development sites and git for deployment.</p>
+            </div>
+        </div>
+
+        <script src="/fractals/main.js"></script>
+        <script>
+            fractals_canvas = document.getElementById("fractals-canvas");
+            fractals.initialize(fractals_canvas);
+        </script>
+    </body>
 </html>
