improve titles, add descriptions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Shea Conlon</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="I am an aspiring data scientist and software engineer currently attending UC Berkeley." />
 
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
 
