--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
         <title>Shea Conlon &mdash; Projects</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="I've worked on projects in the areas of machine learning and web development." />
 
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
 
