--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Shea Conlon</title>
+		<title>Shea Conlon &mdash; Resume</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="I have experience in machine learning, web development, and CS pedagogy." />
 
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
 
