remove captions, add alternate text

--- a/projects.html
+++ b/projects.html
@@ -24,9 +24,8 @@
             <div class="card">
                 <h2 class="title">ml_research</h2>
                 <div class="preview">
-                    <img id="ml-research-image" src="projects_ml_research.png" />
+                    <img id="ml-research-image" src="projects_ml_research.png" alt="image: probability distribution for population size transition" />
                 </div>
-                <div class="caption">Image: probability distribution for population size transition</div>
                 <div class="tag-set">
                     <div class="tag-set-title">Languages:</div>
                     <div class="tag">R</div>
@@ -43,9 +42,8 @@
             <div class="card">
                 <h2 class="title">fractals</h2>
                 <div class="preview">
-                    <canvas id="fractals-canvas"></canvas>
+                    <canvas id="fractals-canvas">image: interactive fractal viewer</canvas>
                 </div>
-                <div class="caption">Image: interactive fractal viewer</div>
                 <div class="tag-set">
                     <div class="tag-set-title">Languages:</div>
                     <div class="tag">Javascript</div>
@@ -59,9 +57,8 @@
             <div class="card">
                 <h2 class="title">sheaconlon.com</h2>
                 <div class="preview">
-                    <img id="sheaconloncom-image" src="projects_sheaconloncom.png" />
+                    <img id="sheaconloncom-image" src="projects_sheaconloncom.png" alt="image: time to first byte for this website over the past month" />
                 </div>
-                <div class="caption">Image: time to first byte for this website over the last week</div>
                 <div class="tag-set">
                     <div class="tag-set-title">Languages:</div>
                     <div class="tag">HTML/CSS</div>
