improve home page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</ul>
 
 		<p id="headline">
-			Hi! I'm Shea, an aspiring data scientist and software engineer.
+			Hi! I'm Shea, an aspiring data scientist and software engineer currently attending UC Berkeley.
 			<span class="phantom"><br><br><br></span>
 		</p>
 	</body>
