--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fira+Sans:400,700" rel="stylesheet">
 
-		<link rel="stylesheet" href="/styles/main.css" />
+		<link rel="stylesheet" href="/styles/shared/main.css" />
 		<link rel="stylesheet" href="/styles/contact.css" />
 	</head>
 	<body>
